RESOLVED FIXED276449
[Cocoa] Default subtitle font is wrong (serif vs. sans-serif)
https://bugs.webkit.org/show_bug.cgi?id=276449
Summary [Cocoa] Default subtitle font is wrong (serif vs. sans-serif)
Jer Noble
Reported 2024-07-10 14:31:15 PDT
[Cocoa] Default subtitle font is wrong (serif vs. sans-serif)
Attachments
Jer Noble
Comment 1 2024-07-10 14:31:17 PDT
Jer Noble
Comment 2 2024-07-10 14:34:53 PDT
EWS
Comment 3 2024-07-11 09:38:34 PDT
Committed 280864@main (414c1f8ec90f): <https://commits.webkit.org/280864@main> Reviewed commits have been landed. Closing PR #30664 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.