[Cocoa] Default subtitle font is wrong (serif vs. sans-serif) https://bugs.webkit.org/show_bug.cgi?id=276449 rdar://126094074

Reviewed by Eric Carlson.

MediaAccessibility will vend a CTFontDescription whose font name is non-public (starting with a "."). In this case,
convert the font name to either "system-ui" or "system-ui-monospaced" depending on the non-public font name.

* Source/WebCore/page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::captionsDefaultFontCSS const):

Canonical link: https://commits.webkit.org/280864@main